# portfolio-solver-framework

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  run_all_problems.sh  run_fastfood.sh  run_one_instance.sh  rust-toolchain.toml  solver.msc.template
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
benchmark/: benchmark.py
benchmark/results/: benchmark_results.csv
benchmark/schedules/: best-static.csv
command-line-ai/: example.py  knn.py  requirements.txt
command-line-ai/data/: knn_model.pkl
commandline-ai/: example.py
minizinc/: Preferences.json
minizinc/challenge/: Dockerfile  README.md
minizinc/solvers/: chuffed.msc.template  framework.msc.template  gecode.msc.template  parasol.msc.template  picat.msc.template  pumpkin.msc.template
nix/: mzn2feat.nix
nix/minizinc/: default.nix  picat.nix
solvers/picat/: wrapper.sh
src/: ai.rs  args.rs  backup_solvers.rs  config.rs  fzn_to_features.rs  insert_objective.rs  is_cancelled.rs  logging.rs  main.rs  minizinc_runner.rs  model_parser.rs  msc_discovery.rs  mzn_to_fzn.rs  process_tree.rs  scheduler.rs  signal_handler.rs  solver_discovery.rs  solver_manager.rs  solver_output.rs  solvers.rs  static_schedule.rs  sunny.rs
src/ai/: commandline.rs
src/insert_objective/: mod.rs
src/mzn_to_fzn/: cached_compiler.rs  compilation.rs  compilation_core_manager.rs  compilation_manager.rs  mod.rs
src/solver_config/: cache.rs  discovery.rs  mod.rs
src/solver_output/: dzn.rs
static-schedules/: example.csv
tests/: end_to_end.rs
tests-manual/: run_all_problems.sh  run_fastfood.sh  run_one_instance.sh
