[package]
name = "portfolio-solver-framework"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ctrlc = { version = "3.5.1", features = ["termination"]}
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
regex = "1.12.2"
sysinfo = "0.37.2"
tempfile = "3.24.0"
itertools = "0.14.0"
tokio-util = { version = "0.7.18", features = ["rt"] }
thiserror = "2.0.17"
async-tempfile = "0.7.0"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
anyhow = "1.0.100"
nix =  { version="0.30.1", features = ["sched"]}
core_affinity = "0.8.3"

[dev-dependencies]
predicates = "3.1"
assert_cmd = "2.1.1"
