[package]
name = "parasol"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.55", features = ["derive", "wrap_help"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ctrlc = { version = "3.5.1", features = ["termination"]}
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "signal"] }
regex = "1.12.2"
sysinfo = "0.38.0"
tempfile = "3.24.0"
itertools = "0.14.0"
tokio-util = { version = "0.7.18", features = ["rt"] }
thiserror = "2.0.18"
async-tempfile = "0.7.0"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
anyhow = "1.0.100"
nix =  { version="0.31.1", features = ["sched", "signal"]}
core_affinity = "0.8.3"
directories = "6.0.0"
libc = "0.2.180"

[dev-dependencies]
predicates = "3.1"
assert_cmd = "2.1.2"


